branch with leaves experiment

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,9 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.DefaultFeature.AutoExposure=True
+r.EyeAdaptation.EditorOnly=False
+r.UsePreExposure=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 bEnableWorldPartition=True
