--- a/Ent.uproject
+++ b/Ent.uproject
@@ -16,6 +16,10 @@
 		{
 			"Name": "Metasound",
 			"Enabled": true
+		},
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
 		}
 	]
 }
